[package]
name = "cs_317_movie_project"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
dotenv = "0.15.0"
once_cell = "1.19.0"
slint = "1.5.1"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "mysql" ] }
tokio = { version = "1.37.0", features = ["full"] }

